--- a/index1.html
+++ b/index1.html
@@ -81,7 +81,7 @@
                     </tbody>
                 </table>
                 <div class="btn-box">
-                    <a href="Thankyou.html" target="_blank">
+                    <a href="Thankyou.html" >
                     <button class="cart-btn">Checkout</button>
                 </a>
                 </div>
@@ -103,7 +103,7 @@
                 <p id="total-item">Total Item : 5</p>
                 <p id="total-price"></p>
                 
-                <a href="Thankyou.html" target="_blank">
+                <a href="Thankyou.html" >
                     <button class="cart-btn">Checkout</button>
                 </a>
             </div>
