Booking now is now Order Now

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </p>
             <div class="button__wrapper">
               <a href="./menu.html" class="btn primary-btn">Explore Menu</a>
-              <a href="./booking.html" class="btn">Book Table</a>
+              <a href="./index1.html" class="btn" target="_blank">Order Now</a>
             </div>
           </div>
         </div>
