--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
 
           </p>
           <p class="ourStory__text">
-            Welcome to HCI's Restaurant. We take pride in delivering warm, friendly service and creating mouth-watering
+            Welcome to Harmony Culinary Infusion Restaurant. We take pride in delivering warm, friendly service and creating mouth-watering
             culinary delights for all. Using only the freshest locally sourced ingredients, we’ll ensure you have a
             dining
             experience to remember.
