--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,viewport-fit=cover">
-    <title>Food Website</title>
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+    <title>Order From Us</title>
     <link rel="stylesheet" href="/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -81,7 +82,9 @@
                     </tbody>
                 </table>
                 <div class="btn-box">
+                    <p>To ensure the prompt and accurate delivery of your order, kindly provide us with the complete and accurate address details before clicking Check-Out button.</p>
                     <a href="Thankyou.html" >
+                        
                     <button class="cart-btn">Checkout</button>
                 </a>
                 </div>
@@ -102,6 +105,7 @@
             <div id="checkout" class="cart-toggle">
                 <p id="total-item">Total Item : 5</p>
                 <p id="total-price"></p>
+                <p>Please make sure to Fill in Address Details Correctly for your Order to reach you.</p>
                 
                 <a href="Thankyou.html" >
                     <button class="cart-btn">Checkout</button>
