--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
         Contact & Inquiry
       </h3>
       <div class="form__wrapper">
-        <form  action="booking.html" name="contact" method="POST" netlify>
+        <form  action="./Booking_Done.html" name="contact" method="POST" >
           <div class="form__group">
             <label for="firstName">First Name</label>
             <input type="text" id="firstName" name="First Name" required>
@@ -143,7 +143,7 @@
             <img src="./images/logo.svg" alt="HCI's Restaurant">
           </div>
           <p class="footer__desc">
-            Fresh and delicious traditional Bangladeshi food to delight the whole family.
+            Fresh and delicious Indian food to delight the whole family.
           </p>
           <div class="footer__socials">
             <h4 class="footer__socials__title">Follow us</h4>
