--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             <h1 class="hero__heading">The flavor of tradition</h1>
             <p class="hero__info">
-              We are a multi-cuisine restaurant offering a wide variety of food experience in both casual and fine
+             <b> Harmony Culinary Infusion</b> (HCI) a multi-cuisine restaurant offering a wide variety of food experience in both casual and fine
               dining
               environment.
             </p>
@@ -298,7 +298,7 @@
             <div class="eventsInfo__item__info">
               <h2 class="eventsInfo__item__title">Corporate Events</h2>
               <p class="eventsInfo__item__text">
-                HCI's Restaurant is the perfect venue for your corporate events. We specialize in private parties.
+                Harmony Culinary Infusion Restaurant is the perfect venue for your corporate events. We specialize in private parties.
               </p>
             </div>
           </div>
@@ -319,7 +319,7 @@
           <h2 class="eventsInfo__title">Book For Events</h2>
           <p class="eventsInfo__text">Book your private event or corporate function at HCI's Restaurant to experience a
             truly unique experience.</p>
-          <a href="./contact.html" class="btn primary-btn">Contact Now</a>
+          <a href="./booking.html" class="btn primary-btn">Contact Now</a>
         </div>
       </div>
     </div>
@@ -335,7 +335,7 @@
           </h2>
           <p class="whyUs__text">
             Quality of Service, Food, Ambiance, and Value of Money are the primary elements for choosing a restaurant.
-            HCI's Restaurant is one of the most exquisite fine-dinning restaurant in Maharashtra with a captivating
+            Harmony Culinary Infusion Restaurant is one of the most exquisite fine-dinning restaurant in Maharashtra with a captivating
             view of JM Road, perfect ambiance, and scrumptious food.
           </p>
         </div>
@@ -577,7 +577,7 @@
   <div id="copyright">
     <div class="container">
       <p class="copyright__text">
-        © copyright 2023 HCI's Restaurant| All rights reserved
+        © copyright 2023 Harmony Culinary Infusion Restaurant| All rights reserved
       </p>
     </div>
   </div>
