--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
               <img src="./images/hello.jfif" alt="Sayed Ahmed">
             </div>
             <div class="testimonial__item__info">
-              <h3 class="testimonial__item__name">Avani</h3>
+              <h3 class="testimonial__item__name">Mary</h3>
               <div class="testimonial__item__stars">
                 <img src="./images/3star.png" alt="3 star">
               </div>
